fixes spacing for navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10936,6 +10936,18 @@ body {
   margin-top: 25px;
 }
 
+.navbar {
+  padding: 0.2rem 1rem !important;
+}
+
+.apphead {
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 .card {
   width: 50%;
   margin: 0 auto;
