--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -4,6 +4,16 @@ body {
 .container {
     margin-top:25px;
 }
+.navbar {
+    padding:.2rem 1rem !important;
+}
+.apphead {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    display:flex;
+    align-items: center;
+    width:100%;
+}
 .card {
     width:50%;
     margin:0 auto;
